--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Just the Class
-tagline: A Jekyll template for course websites
-description: A modern, highly customizable, responsive Jekyll template for course websites
-author: Kevin Lin
-baseurl: '/just-the-class' # the subpath of your site, e.g. /blog
-url: 'https://kevinl.info' # the base hostname & protocol for your site, e.g. http://example.com
+title: How to Make
+tagline: A Self-Guided Course on Making
+description: A space that is at the same time a documentation of my re-learning experience as well as a guide for students at Makerspaces feeling alienated and out-of-touch
+author: Vaanee Tripathi
+baseurl: '/how-to-make' # the subpath of your site, e.g. /blog
+url: 'https://vaaneetripathi.github.io' # the base hostname & protocol for your site, e.g. http://example.com
 exclude: ["Gemfile", "Gemfile.lock", "LICENSE"]
 
 # Theme settings
@@ -28,10 +28,10 @@ search_enabled: true
 heading_anchors: true
 permalink: pretty
 aux_links:
-  Kevin Lin:
-    - 'https://kevinl.info'
-  Just the Class on GitHub:
-    - 'https://github.com/kevinlin1/just-the-class'
+  Vaanee Tripathi:
+    - 'https://vaaneetripathi.github.io'
+  How to Make on GitHub:
+    - 'https://github.com/VaaneeTripathi/how-to-make'
 footer_content:
 
 # Collections for website data
